`page` layout on who-we-are, css classes

--- a/_pages/who-we-are.html
+++ b/_pages/who-we-are.html
@@ -1,86 +1,82 @@
 ---
 permalink: "who-we-are"
-layout: default
+layout: page
 title: Who We Are
 ---
 
-<div class="content-container who-we-are">
+<h1>The Hear We Art Team</h1>
 
-  <h1>The Hear We Art Team</h1>
+<p>We are a group of artists, creatives and designers who work together to create workshops tailored to the needs of students with visual and hearing impairments.</p>
 
-  <p>We are a group of artists, creatives and designers who work together to create workshops tailored to the needs of students with visual and hearing impairments.</p>
+<p>The Hear We Art project leader is Olga Hendel. Nigel Bartram helped develop and finance the original Hear We Art concept and Pilot Programme in 2017. He continues to support the project out of a wish to help, directly, children in need, especially those who must overcome disabilities and require support to have any chance of living an independent and fulfilling life.</p>
 
-  <p>The Hear We Art project leader is Olga Hendel. Nigel Bartram helped develop and finance the original Hear We Art concept and Pilot Programme in 2017. He continues to support the project out of a wish to help, directly, children in need, especially those who must overcome disabilities and require support to have any chance of living an independent and fulfilling life.</p>
+<h2 class="uppercase light-gray font-weight-normal">Project Leader</h2>
 
-  <h2 class="uppercase light-gray font-weight-normal">Project Leader</h2>
+<h2 class="dark-gray font-weight-normal">Olga Hendel</h2>
 
-  <h2 class="dark-gray font-weight-normal">Olga Hendel</h2>
+<div class="no-margin heavy-bottom-margin pure-u-1 pure-u-md-1-2">
+  <p class="no-margin">Olga graduated from Camberwell College of Arts in 2015 and since then has been working as a freelance artist in Rome. In 2012 she co-founded IdenticonArts, a LdT Community Interest Company, based in London, whose objective is to work with disadvantaged groups, from youngsters through  to the elderly, encouraging self-expression through art and craft making. Among the other workshops she has delivered are the Skills Show at the Birmingham Festival, Art for inclusion in Ukraine and Sp8 for Arts London. She also curated a project which produced QUIET! Magazine, participated in the Homegrown festival in Brixton and  the AR.CO laboratory.</p>
 
-  <div class="no-margin heavy-bottom-margin pure-u-1 pure-u-md-1-2">
-    <p class="no-margin">Olga graduated from Camberwell College of Arts in 2015 and since then has been working as a freelance artist in Rome. In 2012 she co-founded IdenticonArts, a LdT Community Interest Company, based in London, whose objective is to work with disadvantaged groups, from youngsters through  to the elderly, encouraging self-expression through art and craft making. Among the other workshops she has delivered are the Skills Show at the Birmingham Festival, Art for inclusion in Ukraine and Sp8 for Arts London. She also curated a project which produced QUIET! Magazine, participated in the Homegrown festival in Brixton and  the AR.CO laboratory.</p>
+  <p class="no-margin medium-top-margin">With the support and help of Nigel, in 2016, Olga visited Sri Lanka to look for underprivileged groups of children who could potentially benefit from Art, Handicraft and Design workshops and met the Principal of Senkadagala School. Discussions quickly led to the development of Hear We Art. In 2017 Olga, led the team (comprising herself, Alessia and Morgan – see below) which successfully piloted the first Hear We Art series of workshops.</p>
+</div>
 
-    <p class="no-margin medium-top-margin">With the support and help of Nigel, in 2016, Olga visited Sri Lanka to look for underprivileged groups of children who could potentially benefit from Art, Handicraft and Design workshops and met the Principal of Senkadagala School. Discussions quickly led to the development of Hear We Art. In 2017 Olga, led the team (comprising herself, Alessia and Morgan – see below) which successfully piloted the first Hear We Art series of workshops.</p>
-  </div>
+<div class="pure-u-1 pure-u-sm-2-3 pure-u-md-5-12 float-right-md">
+  <img
+  alt="Olga Hendel"
+  class="who-we-are-pic"
+  src="{{ 'assets/img/olga-hendel.jpg' | relative_url }}">
+</div>
 
-  <div class="pure-u-1 pure-u-sm-2-3 pure-u-md-5-12 float-right-md">
-    <img
-    alt="Olga Hendel"
-    class="pure-u-1 heavy-bottom-margin"
-    src="{{ 'assets/img/olga-hendel.jpg' | relative_url }}">
-  </div>
+<h2 class="uppercase no-margin-top light-gray font-weight-normal">Graphic Design Tutor</h2>
 
-  <h2 class="uppercase no-margin-top light-gray font-weight-normal">Graphic Design Tutor</h2>
+<h2 class="dark-gray font-weight-normal">Alessia Arcuri</h2>
 
-  <h2 class="dark-gray font-weight-normal">Alessia Arcuri</h2>
+​<p class="no-margin heavy-bottom-margin pure-u-1 pure-u-md-1-2">Alessia is an Italian graphic designer, based in London. She graduated with a First-Class Honours degree in Graphic and Media Design from the London College of Communication (University of the Arts) in 2016. Alessia’s design practice encompasses both analogue and digital. She works in  a variety of fields, including online and offline editorial design, brand identity, web design and animation. She is currently Lead Designer and Art Director for Screen Shot Magazine, curating the design for both the online and offline versions of the editorial platform. Alessia has also worked for Tate Modern in London, designing the poster programme for Future Medina Workshop in late 2016. Other clients and collaborations includes: London Science Museum, Jungle Creations and Downstairs Collective.</p>
 
-  ​<p class="no-margin heavy-bottom-margin pure-u-1 pure-u-md-1-2">Alessia is an Italian graphic designer, based in London. She graduated with a First-Class Honours degree in Graphic and Media Design from the London College of Communication (University of the Arts) in 2016. Alessia’s design practice encompasses both analogue and digital. She works in  a variety of fields, including online and offline editorial design, brand identity, web design and animation. She is currently Lead Designer and Art Director for Screen Shot Magazine, curating the design for both the online and offline versions of the editorial platform. Alessia has also worked for Tate Modern in London, designing the poster programme for Future Medina Workshop in late 2016. Other clients and collaborations includes: London Science Museum, Jungle Creations and Downstairs Collective.</p>
+<div class="pure-u-1 pure-u-sm-2-3 pure-u-md-5-12 float-right-md">
+  <img
+  alt="Alessia Arcuri"
+  class="who-we-are-pic"
+  src="{{ 'assets/img/alessia-arcuri.jpg' | relative_url }}">
+</div>
 
-  <div class="pure-u-1 pure-u-sm-2-3 pure-u-md-5-12 float-right-md">
-    <img
-    alt="Alessia Arcuri"
-    class="pure-u-1 heavy-bottom-margin"
-    src="{{ 'assets/img/alessia-arcuri.jpg' | relative_url }}">
-  </div>
+<h2 class="uppercase no-margin-top light-gray font-weight-normal">Art Tutor and Mural Artists</h2>
 
-  <h2 class="uppercase no-margin-top light-gray font-weight-normal">Art Tutor and Mural Artists</h2>
+<h2 class="dark-gray font-weight-normal">Morganico</h2>
 
-  <h2 class="dark-gray font-weight-normal">Morganico</h2>
+<p class="no-margin heavy-bottom-margin pure-u-1 pure-u-md-1-2">Morganico is a British artist who started from a graffiti background as a youth. He has been working in London since 1996, producing large scale public murals for the London Boroughs of Southwark, Lambeth and Hillingdon, plus a variety of other clients & personal street art projects. He is one of the artists who has been selected to join the prestigious Chelsea Art Club, which was set up Victorian times by James McNeil Whistler of the pre-Raphaelite fame. His most recent large-scale tree carving sculpture can be seen outside the Imperial War museum.  Morganico also conducts spray paint workshops with school children for entertainment agencies.</p>
 
-  <p class="no-margin heavy-bottom-margin pure-u-1 pure-u-md-1-2">Morganico is a British artist who started from a graffiti background as a youth. He has been working in London since 1996, producing large scale public murals for the London Boroughs of Southwark, Lambeth and Hillingdon, plus a variety of other clients & personal street art projects. He is one of the artists who has been selected to join the prestigious Chelsea Art Club, which was set up Victorian times by James McNeil Whistler of the pre-Raphaelite fame. His most recent large-scale tree carving sculpture can be seen outside the Imperial War museum.  Morganico also conducts spray paint workshops with school children for entertainment agencies.</p>
+<div class="pure-u-1 pure-u-sm-2-3 pure-u-md-5-12 float-right-md">
+  <img
+  alt="Morganico"
+  class="who-we-are-pic"
+  src="{{ 'assets/img/morganico.jpg' | relative_url }}">
+</div>
 
-  <div class="pure-u-1 pure-u-sm-2-3 pure-u-md-5-12 float-right-md">
-    <img
-    alt="Morganico"
-    class="pure-u-1 heavy-bottom-margin"
-    src="{{ 'assets/img/morganico.jpg' | relative_url }}">
-  </div>
+<h2 class="dark-gray font-weight-normal">Nicole White</h2>
 
-  <h2 class="dark-gray font-weight-normal">Nicole White</h2>
+<p class="no-margin heavy-bottom-margin pure-u-1 pure-u-md-1-2">Nicole is a Mural Artist and Storyteller based in Sheffield, England. She is interested in the link between creativity and education, and how to encourage engagement using playful ways of making. She has explored this through through leading workshops, community mural projects, mainstream and alternative school settings in England and Peru, creating art and murals with young people. Currently she is working as a freelance Mural Artist. She painted her first mural in Pisco, Peru for an Earthquake relief organisation called Pisco Sin Fronteras and has been passionate to share the empowerment of mural painting ever since.</p>
 
-  <p class="no-margin heavy-bottom-margin pure-u-1 pure-u-md-1-2">Nicole is a Mural Artist and Storyteller based in Sheffield, England. She is interested in the link between creativity and education, and how to encourage engagement using playful ways of making. She has explored this through through leading workshops, community mural projects, mainstream and alternative school settings in England and Peru, creating art and murals with young people. Currently she is working as a freelance Mural Artist. She painted her first mural in Pisco, Peru for an Earthquake relief organisation called Pisco Sin Fronteras and has been passionate to share the empowerment of mural painting ever since.</p>
+<div class="pure-u-1 pure-u-sm-2-3 pure-u-md-5-12 float-right-md">
+  <img
+  alt="Nicole White"
+  class="who-we-are-pic"
+  src="{{ 'assets/img/nicole-white.jpg' | relative_url }}">
+</div>
 
-  <div class="pure-u-1 pure-u-sm-2-3 pure-u-md-5-12 float-right-md">
-    <img
-    alt="Nicole White"
-    class="pure-u-1 heavy-bottom-margin"
-    src="{{ 'assets/img/nicole-white.jpg' | relative_url }}">
-  </div>
+<h2 class="uppercase no-margin-top light-gray font-weight-normal">2D Animation Tutor</h2>
 
-  <h2 class="uppercase no-margin-top light-gray font-weight-normal">2D Animation Tutor</h2>
+<h2 class="dark-gray font-weight-normal">Niroshan Bandara</h2>
 
-  <h2 class="dark-gray font-weight-normal">Niroshan Bandara</h2>
+<div class="no-margin heavy-bottom-margin pure-u-1 pure-u-md-1-2">
+  <p class="no-margin">After graduating from University of Moratuwa in Sri Lanka with a Bachelor of Design in Graphics & Visual Communication, Niroshan spent 03 Years interning in Channel One MTV as a Motion Graphic Artist. During that time, he brainstormed ideas and story concepts with Channel Presentation Creative Team. He drew detailed storyboards that formed the basis for local and international TV advertisements. Television Graphic Themes, 2D / 3D Animation skills. At Channel One MTV, he learned to share ideas, accept criticism and problem-solve in a high-pressured environment.</p>
 
-  <div class="no-margin heavy-bottom-margin pure-u-1 pure-u-md-1-2">
-    <p class="no-margin">After graduating from University of Moratuwa in Sri Lanka with a Bachelor of Design in Graphics & Visual Communication, Niroshan spent 03 Years interning in Channel One MTV as a Motion Graphic Artist. During that time, he brainstormed ideas and story concepts with Channel Presentation Creative Team. He drew detailed storyboards that formed the basis for local and international TV advertisements. Television Graphic Themes, 2D / 3D Animation skills. At Channel One MTV, he learned to share ideas, accept criticism and problem-solve in a high-pressured environment.</p>
+  <p class="no-margin medium-top-margin">After Resuming from the TV station, currently working as a freelance artist almost 03 Years, for local and international Clients, as well as working as a visiting Lecture for Graphic / web & interactive design/ Animation in several Universities & Academies.</p>
+</div>
 
-    <p class="no-margin medium-top-margin">After Resuming from the TV station, currently working as a freelance artist almost 03 Years, for local and international Clients, as well as working as a visiting Lecture for Graphic / web & interactive design/ Animation in several Universities & Academies.</p>
-  </div>
-
-  <div class="pure-u-1 pure-u-sm-2-3 pure-u-md-5-12 float-right-md">
-    <img
-    alt="Niroshan Bandara"
-    class="pure-u-1 heavy-bottom-margin"
-    src="{{ 'assets/img/niroshan-bandara.jpg' | relative_url }}">
-  </div>
-
+<div class="pure-u-1 pure-u-sm-2-3 pure-u-md-5-12 float-right-md">
+  <img
+  alt="Niroshan Bandara"
+  class="who-we-are-pic"
+  src="{{ 'assets/img/niroshan-bandara.jpg' | relative_url }}">
 </div>
