--- a/_pages/about.html
+++ b/_pages/about.html
@@ -18,7 +18,7 @@ title: About
 
 <p>The workshops consist of  Graphic Design, Photography, Wood Carving and Mural Art, all of which are <strong>seen as priorities by the school</strong>. The teaching methods have been carefully developed to deal with and embrace language differences and communication challenges, so as <strong>allow the children to develop their dormant creative abilities</strong> and <strong>not be inhibited by their</strong> disabilities (for further detail click here).</p>
 
-<img class="medium-left-margin float-right pure-u-1 pure-u-sm-1-2" src="{{ 'assets/img/about-1.jpg' | relative_url }}">
+<img class="medium-left-margin float-right pure-u-1 pure-u-sm-1-2" src="{{ 'assets/img/about-1.jpg' | relative_url }}" alt="TODO">
 
 <p class="heavy-bottom-margin">Senkadagala school receives state funding and must therefore follow the <strong>national curriculum</strong>, which makes no concession to, and offers no special support for, children with disabilities, consequently, the great majority struggle, leave school with very low educational attainment and with no vocational skills. Combined with their disabilities, this means, <strong>regardless of talent, they are condemned to do the most menial, poorly paid jobs, assuming they are able to find any work at all</strong>.</p>
 
@@ -29,7 +29,7 @@ title: About
 
   <li><strong>Boost the children’s confidence and self-esteem</strong> and at the same time <strong>bring joy, pride and sense of achievement</strong>. Thereby reinforce their commitment to the school.</li>
 
-  <img class="medium-right-margin float-left pure-u-1 pure-u-sm-1-2" src="{{ 'assets/img/about-2.jpg' | relative_url }}">
+  <img class="medium-right-margin float-left pure-u-1 pure-u-sm-1-2" src="{{ 'assets/img/about-2.jpg' | relative_url }}" alt="TODO">
 
   <li>Fully involve, train and transfer skills to Senkadagala’s teachers so as to be able progress to a stage where they have the ability to run such programmes on their own.</li>
 
