--- a/_pages/index.html
+++ b/_pages/index.html
@@ -16,15 +16,16 @@ layout: default
   <div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-3">
     <div class="light-padding">
       <p class="light-padding light-border-radius medium-orange-bg">Hear We Art in Summary</p>
+
       <p>Hear We Art is a charitable project enabling professional artists, designers and other creatives to deliever creative workshops to <strong>poor, deaf  Sri Lankan children</strong></p>
 
-      <p>Hear We Art has clearly defined aims, key among which are to:
+      <div>Hear We Art has clearly defined aims, key among which are to:
         <ul>
           <li>Help the children acquire vocationally oriented skills and capabilities.</li>
           <li>Boost the children’s confidence and self-esteem and at the same time bring joy, pride and sense of achievement.</li>
           <li>Involve local creatives and teachers in the programme, to both promote the objective developing autonomy and help build links to the community which can help children transition to much more worthwhile work.</li>
         </ul>
-      </p>
+      </div>
 
       <a href="{{ 'donate' | relative_url }}" class="pure-button medium-orange-bg">Learn more</a>
 
@@ -34,6 +35,7 @@ layout: default
   <div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-3">
     <div class="light-padding">
       <p class="light-padding light-border-radius medium-orange-bg">News & Activities</p>
+
       <p>This year, we will  be running four courses: Graphic Design, Photography, Wood Carving and Mural Art. The three main courses are aimed at giving students some work-related skills which will help them in find a  much better place in the community, economically and socially, when they finish their studies</p>
 
       <a href="{{ 'donate' | relative_url }}" class="pure-button medium-orange-bg medium-bottom-margin">Learn more</a>
@@ -47,9 +49,10 @@ layout: default
   <div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-3">
     <div class="light-padding">
     <p class="light-padding light-border-radius medium-orange-bg">Donate</p>
-    <p>Hear We Art is totally dependent on donations. To make the 2018 workshops happen we need your help.
 
-Thanks to your support we’ll be able to send three artists and creatives to Sri Lanka and pay for the involvement of several local creatives and craftsmen .We plan to buy four more computers, ten cameras plus all the related software and tools and materials for the workshops (such as stencils, photography materials, wood carving tools etc.)..</p>
+    <p>Hear We Art is totally dependent on donations. To make the 2018 workshops happen we need your help.</p>
+
+    <p>Thanks to your support we’ll be able to send three artists and creatives to Sri Lanka and pay for the involvement of several local creatives and craftsmen .We plan to buy four more computers, ten cameras plus all the related software and tools and materials for the workshops (such as stencils, photography materials, wood carving tools etc.)..</p>
 
     <a href="{{ 'donate' | relative_url }}" class="pure-button medium-orange-bg">Donate</a>
 
