--- a/_pages/the-school.html
+++ b/_pages/the-school.html
@@ -6,7 +6,7 @@ title: The School
 
 <div class="content-container">
 
-  <img class="pure-u-1 pure-u-md-1-2 float-right heavy-top-margin medium-left-margin" src="{{ 'assets/img/the-school-1.jpg' | relative_url }}">
+  <img class="pure-u-1 pure-u-md-1-2 float-right heavy-top-margin medium-left-margin" src="{{ 'assets/img/the-school-1.jpg' | relative_url }}" alt="TODO">
 
   <h1>Senkadagala School for Deaf and Blind Children</h1>
 
@@ -14,7 +14,7 @@ title: The School
 
   <p>Since its foundation, Senkadagala School has striven to promote the children’s well-being and their integration into the local environment. However, the school has to follow the unified national school curriculum which means the children have to follow the same program as every other school in the country. As the curriculum is not at all adapted to children’s disabilities, most if not all struggle to keep-up, especially with academic subjects. Whilst many of the pupils are very talented in art and creative subjects, unfortunately these have no place in the normal state curriculum. The school has almost no resource, or expertise, to teach creative subjects, nor provide any vocationally oriented education.</p>
 
-  <img class="pure-u-1 pure-u-md-1-2 float-left medium-top-margin medium-right-margin" src="{{ 'assets/img/the-school-2.jpg' | relative_url }}">
+  <img class="pure-u-1 pure-u-md-1-2 float-left medium-top-margin medium-right-margin" src="{{ 'assets/img/the-school-2.jpg' | relative_url }}" alt="TODO">
 
   <p>As a result, the children usually leave school with poor academic results which means few are able to move on to further education and the absence of vocational training means the great majority of pupils have to get unskilled, very poorly paid work, if they find anything at all.</p>
 
