Home style update

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -15,7 +15,7 @@ layout: default
 
   <div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-3">
     <div class="light-padding">
-      <p class="light-padding light-border-radius medium-orange-bg">Hear We Art in Summary</p>
+      <p class="light-padding light-border-radius light-gray-bg">Hear We Art in Summary</p>
 
       <p>Hear We Art is a charitable project enabling professional artists, designers and other creatives to deliever creative workshops to <strong>poor, deaf  Sri Lankan children</strong></p>
 
@@ -34,7 +34,7 @@ layout: default
 
   <div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-3">
     <div class="light-padding">
-      <p class="light-padding light-border-radius medium-orange-bg">News & Activities</p>
+      <p class="light-padding light-border-radius light-gray-bg">News & Activities</p>
 
       <p>This year, we will  be running four courses: Graphic Design, Photography, Wood Carving and Mural Art. The three main courses are aimed at giving students some work-related skills which will help them in find a  much better place in the community, economically and socially, when they finish their studies</p>
 
@@ -48,7 +48,7 @@ layout: default
 
   <div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-3">
     <div class="light-padding">
-    <p class="light-padding light-border-radius medium-orange-bg">Donate</p>
+    <p class="light-padding light-border-radius light-gray-bg">Donate</p>
 
     <p>Hear We Art is totally dependent on donations. To make the 2018 workshops happen we need your help.</p>
 
