--- a/_pages/the-school.html
+++ b/_pages/the-school.html
@@ -1,51 +1,19 @@
 ---
 permalink: "the-school"
-layout: default
+layout: page
 title: The School
 ---
 
-<div class="content-container">
+<img class="pure-u-1 pure-u-md-1-2 float-right heavy-top-margin medium-left-margin" src="{{ 'assets/img/the-school-1.jpg' | relative_url }}" alt="TODO">
 
-  <img class="pure-u-1 pure-u-md-1-2 float-right heavy-top-margin medium-left-margin" src="{{ 'assets/img/the-school-1.jpg' | relative_url }}" alt="TODO">
+<h1>Senkadagala School for Deaf and Blind Children</h1>
 
-  <h1>Senkadagala School for Deaf and Blind Children</h1>
+<p>Senkadagala Deaf and Blind School, in Kandy, Sri Lanka, was founded in 1962, by the president of the Ceylon Association for the Blind, as a boarding school for children aged 3 to 18, from all over the country. The school hostel provides food and accommodation, free of charge, as most of the children come from very poor families in rural parts of the country. As government financial resources are very limited, the school also relies on the support of The International Philanthropic Society of Sweden, whose funding is used to improve children’s health, hygiene and living conditions. The school also receives support from private patrons who help meet the cost of food and maintenance.</p>
 
-  <p>Senkadagala Deaf and Blind School, in Kandy, Sri Lank, was founded in 1962, by the president of the Ceylon Association for the Blind, as a boarding school for children aged 3 to 18, from all over the country. The school hostel provides food and accommodation, free of charge, as most of the children come from very poor families in rural parts of the country. As government financial resources are very limited, the school also relies on the support of The International Philanthropic Society of Sweden, whose funding is used to improve children’s health, hygiene and living conditions. The school also receives support from private patrons who help meet the cost of food and maintenance.</p>
+<p>Since its foundation, Senkadagala School has striven to promote the children’s well-being and their integration into the local environment. However, the school has to follow the unified national school curriculum which means the children have to follow the same program as every other school in the country. As the curriculum is not at all adapted to children’s disabilities, most if not all struggle to keep-up, especially with academic subjects. Whilst many of the pupils are very talented in art and creative subjects, unfortunately these have no place in the normal state curriculum. The school has almost no resource, or expertise, to teach creative subjects, nor provide any vocationally oriented education.</p>
 
-  <p>Since its foundation, Senkadagala School has striven to promote the children’s well-being and their integration into the local environment. However, the school has to follow the unified national school curriculum which means the children have to follow the same program as every other school in the country. As the curriculum is not at all adapted to children’s disabilities, most if not all struggle to keep-up, especially with academic subjects. Whilst many of the pupils are very talented in art and creative subjects, unfortunately these have no place in the normal state curriculum. The school has almost no resource, or expertise, to teach creative subjects, nor provide any vocationally oriented education.</p>
+<img class="pure-u-1 pure-u-md-1-2 float-left medium-top-margin medium-right-margin" src="{{ 'assets/img/the-school-2.jpg' | relative_url }}" alt="TODO">
 
-  <img class="pure-u-1 pure-u-md-1-2 float-left medium-top-margin medium-right-margin" src="{{ 'assets/img/the-school-2.jpg' | relative_url }}" alt="TODO">
+<p>As a result, the children usually leave school with poor academic results which means few are able to move on to further education and the absence of vocational training means the great majority of pupils have to get unskilled, very poorly paid work, if they find anything at all.</p>
 
-  <p>As a result, the children usually leave school with poor academic results which means few are able to move on to further education and the absence of vocational training means the great majority of pupils have to get unskilled, very poorly paid work, if they find anything at all.</p>
-
-  <p>To help the children develop and capitalize on their natural creative abilities, the School Board decided to introduce a few afternoon classes, led by volunteer tutors, in subjects such as computing, photography, graphic design, woodcarving and dress making. But often the teachers have quite limited knowledge of and experience in teaching these subjects. Hear We Art’s workshops have been specifically designed and developed, not only to give the pupils much enhanced exposure to these subjects, but also to very significantly up-skill the teachers’ abilities to teach them.</p>
-
-  <h2>What some of the school and kids said about the <a href="{{ '2017-pilot-program' | relative_url }}">2017 Hear We Art Pilot Project</a></h2>
-</div>
-
-<section class="the-school-section-quote medium-bottom-padding">
-  <div class="content-container">
-    <blockquote class="heavy-top-margin">It is a beautiful workshop tailored for the students’ needs and this is something we miss lot. Students have many benefits and learned a lot about Graphic Design and Mural painting. We hope you come again!</blockquote>
-    <p>Darshani Kumari Dissanayake, school coordinator</p>
-
-    <blockquote>Many people today are complaining about present times, they say that the world is getting worst and people are more selfish forgetting about the true values. Hear We Art is a live proof that this is not true.</blockquote>
-    <p>Mrs. B.B.Gamage, school principal</p>
-
-    <blockquote>Thank you I really liked the course. I learned how many things that are intuitive to me can be actually used in graphic design to make great composition and images and used to sell and decorate products. Please come back and show us more!</blockquote>
-    <p>Tharindu Vishvajith Morawaliyadda, student</p>
-
-    <!--
-    <blockquote>This workshop not only gave students practical information, but it also set an example for its enthusiastic tutors and the love and passion that has been transmitted with the project. Everybody in the school has been inspired by that.</blockquote>
-    <p>School teacher</p>
-    -->
-
-    <blockquote>The school motto is centered upon the happiness of these needy kids, and administration believes that this would be an instant success among the children.
-    <strong>Let me elaborate on the importance of your project to the school</strong>. I recently indulged the school children with a treat for my birthday, and I noticed some children with extreme frustration. The matron informed me that the communication barrier is the reason for their frustration. These children need some form to express their feelings and thoughts. Your suggested proposal is beyond ideal for these kids.</blockquote>
-    <p>Damayanthi Werapitiya, school patron</p>
-
-  </div>
-</section>
-
-
-
-
+<p>To help the children develop and capitalize on their natural creative abilities, the School Board decided to introduce a few afternoon classes, led by volunteer tutors, in subjects such as computing, photography, graphic design, woodcarving and dress making. But often the teachers have quite limited knowledge of and experience in teaching these subjects. Hear We Art’s workshops have been specifically designed and developed, not only to give the pupils much enhanced exposure to these subjects, but also to very significantly up-skill the teachers’ abilities to teach them.</p>
