Fixed margins in about

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -41,9 +41,9 @@ title: About
   <p>Hear We Art piloted the first <a href="{{ '2017-pilot-program' | relative_url }}">workshops in 2017</a>, which were <strong>judged a great success</strong> by the children, their families, the teachers and the school management all of whom insist we return in 2018! Here just a few comments:</p>
 </div>
 
-<section class="quote-section medium-bottom-padding">
+<section class="quote-section medium-vertical-padding medium-vertical-margin">
   <div class="content-container">
-    <blockquote class="heavy-top-margin">It is a beautiful workshop tailored for the students’ needs and this is something we miss lot. Students have many benefits and learned a lot about Graphic Design and Mural painting. We hope you come again!</blockquote>
+    <blockquote>It is a beautiful workshop tailored for the students’ needs and this is something we miss lot. Students have many benefits and learned a lot about Graphic Design and Mural painting. We hope you come again!</blockquote>
     <p>Darshani Kumari Dissanayake, school coordinator</p>
 
     <blockquote>Many people today are complaining about present times, they say that the world is getting worst and people are more selfish forgetting about the true values. Hear We Art is a live proof that this is not true.</blockquote>
