--- a/_pages/who-we-are.html
+++ b/_pages/who-we-are.html
@@ -69,9 +69,11 @@ title: Who We Are
 <h2 class="dark-gray font-weight-normal">Niroshan Bandara</h2>
 
 <div class="no-margin heavy-bottom-margin pure-u-1 pure-u-md-1-2">
-  <p class="no-margin">After graduating from University of Moratuwa in Sri Lanka with a Bachelor of Design in Graphics & Visual Communication, Niroshan spent 03 Years interning in Channel One MTV as a Motion Graphic Artist. During that time, he brainstormed ideas and story concepts with Channel Presentation Creative Team. He drew detailed storyboards that formed the basis for local and international TV advertisements. Television Graphic Themes, 2D / 3D Animation skills. At Channel One MTV, he learned to share ideas, accept criticism and problem-solve in a high-pressured environment.</p>
+  <p class="no-margin">Overcoming the serious disability of having no arms, which means Niroshan has to use his toes to operate a computer keyboard, he has developed a successful international career as a 2D and 3D graphic designer. After graduating from University of Moratuwa, in Sri Lanka, with a Bachelor of Design in Graphics & Visual Communication, Niroshan spent three years as an intern Motion Graphic Artist at MTV in the US where he developed his 2D / 3D Animation skills, learned to share ideas, and problem-solve in a high-pressured environment. Niroshan created many storyboards which formed the basis of US local and international TV advertisements as well as developing many graphic themes for MTV.</p>
 
-  <p class="no-margin medium-top-margin">After Resuming from the TV station, currently working as a freelance artist almost 03 Years, for local and international Clients, as well as working as a visiting Lecture for Graphic / web & interactive design/ Animation in several Universities & Academies.</p>
+  <p class="no-margin medium-top-margin">In the three years since he returned from the US, Niroshan has built up a business as  a freelance artist, developing a portfolio of  local Sri Lankan and international clients, He’s also now a visiting lecturer on  for graphic web & interactive design and animation in several Sri Lankan universities and academies.</p>
+
+  <p class="no-margin medium-top-margin">We are delighted to be working with Niroshan, not only for the graphic design skills and experience he brings, but also because it marks an important step in our aim of Hear We Art transitioning to being a programme which locals will be able to deliver autonomously. And perhaps most important of all, Niroshan will give the children a huge motivational boost, showing how it is perfectly possible to succeed despite having to overcome serious disabilities.</p>
 </div>
 
 <div class="pure-u-1 pure-u-sm-2-3 pure-u-md-5-12 float-right-md">
