--- a/_pages/about.html
+++ b/_pages/about.html
@@ -16,11 +16,11 @@ title: About
     </div>
   </div>
 
-  <p class="heavy-top-margin">Hear We Art is a charitable project enabling a small group of British, Italian and this year, local Sri Lankan professional artists, designers, other creatives to develop and deliver, once a year, workshops to <strong>poor, deaf Sri Lankan children</strong> aged between 5 and 16 (some of whom are also orphans,) who attend the <a href="https://senkadagaladbs.blogspot.com/">Senkadagala Boarding School</a> in Kandy, Sri Lanka.</p>
+  <p class="heavy-top-margin">Hear We Art is a charitable project enabling a small group of British, Italian and this year, local Sri Lankan professional artists, designers, other creatives to develop and deliver, once a year, workshops to <strong>poor, deaf Sri Lankan children</strong> aged between 10 and 18 (some of whom are also orphans,) who attend the <a href="https://senkadagaladbs.blogspot.com/">Senkadagala Boarding School</a> in Kandy, Sri Lanka.</p>
 
   <p>The workshops consist of  Graphic Design, Photography, Wood Carving and Mural Art, all of which are <strong>seen as priorities by the school</strong>. The teaching methods have been carefully developed to deal with and embrace language differences and communication challenges, so as <strong>allow the children to develop their dormant creative abilities</strong> and <strong>not be inhibited by their</strong> disabilities.</p>
 
-  <img class="medium-left-margin float-right pure-u-1 pure-u-sm-1-2" src="{{ 'assets/img/about-1.jpg' | relative_url }}" alt="TODO">
+  <img class="medium-left-margin medium-bottom-margin float-right pure-u-1 pure-u-sm-1-2" src="{{ 'assets/img/about-1.jpg' | relative_url }}" alt="TODO">
 
   <p class="heavy-bottom-margin">Senkadagala school receives state funding and must therefore follow the <strong>national curriculum</strong>, which makes no concession to, and offers no special support for, children with disabilities, consequently, the great majority struggle, leave school with very low educational attainment and with no vocational skills. Combined with their disabilities, this means, <strong>regardless of talent, they are condemned to do the most menial, poorly paid jobs, assuming they are able to find any work at all</strong>.</p>
 
@@ -31,7 +31,7 @@ title: About
 
     <li><strong>Boost the children’s confidence and self-esteem</strong> and at the same time <strong>bring joy, pride and sense of achievement</strong>. Thereby reinforce their commitment to the school.</li>
 
-    <img class="medium-right-margin float-left pure-u-1 pure-u-sm-1-2" src="{{ 'assets/img/about-2.jpg' | relative_url }}" alt="TODO">
+    <img class="medium-right-margin medium-bottom-margin float-left pure-u-1 pure-u-sm-1-2" src="{{ 'assets/img/about-2.jpg' | relative_url }}" alt="TODO">
 
     <li>Fully involve, train and transfer skills to Senkadagala’s teachers so as to be able progress to a point where they have the ability to run such programmes on their own.</li>
 
