Solved margin issues on the-school & fix in donate

--- a/_pages/who-we-are.html
+++ b/_pages/who-we-are.html
@@ -27,7 +27,7 @@ title: Who We Are
   src="{{ 'assets/img/who-we-are-olga-hendel.jpg' | relative_url }}">
 </div>
 
-<h2 class="uppercase no-margin-top light-gray font-weight-normal">Graphic Design Tutor</h2>
+<h2 class="uppercase no-top-margin light-gray font-weight-normal">Graphic Design Tutor</h2>
 
 <h2 class="dark-gray font-weight-normal">Alessia Arcuri</h2>
 
@@ -40,7 +40,7 @@ title: Who We Are
   src="{{ 'assets/img/who-we-are-alessia-arcuri.jpg' | relative_url }}">
 </div>
 
-<h2 class="uppercase no-margin-top light-gray font-weight-normal">Art Tutor and Mural Artists</h2>
+<h2 class="uppercase no-top-margin light-gray font-weight-normal">Art Tutor and Mural Artists</h2>
 
 <h2 class="dark-gray font-weight-normal">Morganico</h2>
 
@@ -64,7 +64,7 @@ title: Who We Are
   src="{{ 'assets/img/who-we-are-nicole-white.jpg' | relative_url }}">
 </div>
 
-<h2 class="uppercase no-margin-top light-gray font-weight-normal">2D Animation Tutor</h2>
+<h2 class="uppercase no-top-margin light-gray font-weight-normal">2D Animation Tutor</h2>
 
 <h2 class="dark-gray font-weight-normal">Niroshan Bandara</h2>
 
