--- a/_pages/the-school.html
+++ b/_pages/the-school.html
@@ -4,15 +4,25 @@ layout: page
 title: The School
 ---
 
-<img class="pure-u-1 pure-u-md-1-2 float-right heavy-top-margin medium-left-margin" src="{{ 'assets/img/the-school-1.jpg' | relative_url }}" alt="TODO">
+<div class="pure-g heavy-top-margin">
+  <div class="pure-u-1 pure-u-md-11-24">
+    <h1 class="no-top-margin">Senkadagala School for Deaf and Blind Children</h1>
 
-<h1>Senkadagala School for Deaf and Blind Children</h1>
+    <p class="no-margin medium-bottom-margin">Senkadagala Deaf and Blind School, in Kandy, Sri Lanka, was founded in 1962, by the president of the Ceylon Association for the Blind, as a boarding school for children aged 3 to 18, from all over the country. The school hostel provides food and accommodation, free of charge, as most of the children come from very poor families in rural parts of the country. As government financial resources are very limited, the school also relies on the support of The International Philanthropic Society of Sweden, whose funding is used to improve children’s health, hygiene and living conditions. The school also receives support from private patrons who help meet the cost of food and maintenance.</p>
+  </div>
 
-<p>Senkadagala Deaf and Blind School, in Kandy, Sri Lanka, was founded in 1962, by the president of the Ceylon Association for the Blind, as a boarding school for children aged 3 to 18, from all over the country. The school hostel provides food and accommodation, free of charge, as most of the children come from very poor families in rural parts of the country. As government financial resources are very limited, the school also relies on the support of The International Philanthropic Society of Sweden, whose funding is used to improve children’s health, hygiene and living conditions. The school also receives support from private patrons who help meet the cost of food and maintenance.</p>
+  <div class="pure-u-md-1-24"></div>
 
-<p>Since its foundation, Senkadagala School has striven to promote the children’s well-being and their integration into the local environment. However, the school has to follow the unified national school curriculum which means the children have to follow the same program as every other school in the country. As the curriculum is not at all adapted to children’s disabilities, most if not all struggle to keep-up, especially with academic subjects. Whilst many of the pupils are very talented in art and creative subjects, unfortunately these have no place in the normal state curriculum. The school has almost no resource, or expertise, to teach creative subjects, nor provide any vocationally oriented education.</p>
+  <div class="pure-u-1 pure-u-md-1-2 medium-bottom-margin">
+    <img class="pure-u-1" src="{{ 'assets/img/the-school-1.jpg' | relative_url }}" alt="TODO">
+  </div>
 
-<img class="pure-u-1 pure-u-md-1-2 float-left medium-top-margin medium-right-margin" src="{{ 'assets/img/the-school-2.jpg' | relative_url }}" alt="TODO">
+  <div class="pure-u-1">
+    <p class="no-margin">Since its foundation, Senkadagala School has striven to promote the children’s well-being and their integration into the local environment. However, the school has to follow the unified national school curriculum which means the children have to follow the same program as every other school in the country. As the curriculum is not at all adapted to children’s disabilities, most if not all struggle to keep-up, especially with academic subjects. Whilst many of the pupils are very talented in art and creative subjects, unfortunately these have no place in the normal state curriculum. The school has almost no resource, or expertise, to teach creative subjects, nor provide any vocationally oriented education.</p>
+  </div>
+</div>
+
+<img class="pure-u-1 pure-u-md-1-2 float-left medium-vertical-margin medium-right-margin" src="{{ 'assets/img/the-school-2.jpg' | relative_url }}" alt="TODO">
 
 <p>As a result, the children usually leave school with poor academic results which means few are able to move on to further education and the absence of vocational training means the great majority of pupils have to get unskilled, very poorly paid work, if they find anything at all.</p>
 
