--- a/_pages/index.html
+++ b/_pages/index.html
@@ -11,7 +11,7 @@ layout: default
 </div>
 
 
-<div class="pure-g">
+<div class="pure-g home-col-container">
 
   <div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-3">
     <div class="light-padding">
