fix: typos, pagination, images

--- a/_pages/projects/2019.html
+++ b/_pages/projects/2019.html
@@ -4,12 +4,6 @@ layout: page
 title: January - February 2019
 ---
 
-<style>
-.content-container {
-  overflow: hidden;
-}
-</style>
-
 <p>In 2019 our Sri Lanka adventure keeps on going! This year HearWeArt implemented three courses in two different schools: Senkadagala School of Deaf and Blind and Evelyn nurseries children home.</p>
 
 <p>The course in Senkadagala School of Deaf and Blind, included 40 lessons hours and aimed to teach the basis techniques relative to the use of the camera together with the knowledge of video making as a visual art. The course objective is to give an outlet in particular to Deaf students, as visual creations represent a “natural method of expression” that is not dependant from oral abilities. In a cultural context where Deaf people have not equal access to employment they might experience a job-related anxiety, and the teaching of professional creative skills together with encouraging self-expression can give a very positive strike to push the pupils towards their future.</p>
@@ -36,20 +30,24 @@ title: January - February 2019
 <p>The week started with the Photography workshop. After letting the pupils experiment with the cameras, we delivered a two hours introduction, comprehensive of basic technicalities and history of photography, followed by practical exercises. During the course, that lasted three days, their improvement was substantial and their focus and interested kept them alert and sensitive to our suggestions and corrections.</p>
 
 <div class="pure-g">
-  <div class="pure-u-1 pure-u-md-11-24 light-margin">
-    <img
-    alt="TODO"
-    class="pure-u-1"
-    src="{{ 'assets/img/2019-1.jpg' | relative_url }}"
-    >
+  <div class="pure-u-md-1-2">
+    <div class="pure-u-md-23-24 float-left-md">
+      <img
+      alt="TODO"
+      class="pure-u-1"
+      src="{{ 'assets/img/2019-1.jpg' | relative_url }}"
+      >
+    </div>
   </div>
 
-  <div class="pure-u-1 pure-u-md-11-24 light-margin">
-    <img
-    alt="TODO"
-    class="pure-u-1"
-    src="{{ 'assets/img/2019-2.jpg' | relative_url }}"
-    >
+  <div class="pure-u-md-1-2">
+    <div class="pure-u-md-23-24 float-right-md">
+      <img
+      alt="TODO"
+      class="pure-u-1"
+      src="{{ 'assets/img/2019-2.jpg' | relative_url }}"
+      >
+    </div>
   </div>
 </div>
 
@@ -69,34 +67,47 @@ title: January - February 2019
 
 <p>After an initial brainstorm, the children supported by their teacher and translator, proposed to present their ideas through drawings, as they felt more confident with visual storytelling than writing. We requested them to specify every possible details in the drawings which they did as you can observe in the four storyboards.</p>
 
-<div class="pure-u-1 pure-u-md-11-24 light-margin">
-  <img
-  alt="TODO"
-  class="pure-u-1"
-  src="{{ 'assets/img/2019-3.jpg' | relative_url }}"
-  >
-</div>
-<div class="pure-u-1 pure-u-md-11-24 light-margin">
-  <img
-  alt="TODO"
-  class="pure-u-1"
-  src="{{ 'assets/img/2019-4.jpg' | relative_url }}"
-  >
-</div>
+<div class="pure-g">
+  <div class="pure-u-md-1-2 light-vertical-margin">
+    <div class="pure-u-md-23-24 float-left-md">
+      <img
+      alt="TODO"
+      class="pure-u-1"
+      src="{{ 'assets/img/2019-3.jpg' | relative_url }}"
+      >
+    </div>
+  </div>
 
-<div class="pure-u-1 pure-u-md-11-24 light-margin">
-  <img
-  alt="TODO"
-  class="pure-u-1"
-  src="{{ 'assets/img/2019-5.jpg' | relative_url }}"
-  >
-</div>
-<div class="pure-u-1 pure-u-md-11-24 light-margin">
-  <img
-  alt="TODO"
-  class="pure-u-1"
-  src="{{ 'assets/img/2019-6.jpg' | relative_url }}"
-  >
+  <div class="pure-u-md-1-2 light-vertical-margin">
+    <div class="pure-u-md-23-24 float-right-md">
+      <img
+      alt="TODO"
+      class="pure-u-1"
+      src="{{ 'assets/img/2019-4.jpg' | relative_url }}"
+      >
+    </div>
+  </div>
+
+
+  <div class="pure-u-md-1-2 light-vertical-margin">
+    <div class="pure-u-md-23-24 float-left-md">
+      <img
+      alt="TODO"
+      class="pure-u-1"
+      src="{{ 'assets/img/2019-5.jpg' | relative_url }}"
+      >
+    </div>
+  </div>
+
+  <div class="pure-u-md-1-2 light-vertical-margin">
+    <div class="pure-u-md-23-24 float-right-md">
+      <img
+      alt="TODO"
+      class="pure-u-1"
+      src="{{ 'assets/img/2019-6.jpg' | relative_url }}"
+      >
+    </div>
+  </div>
 </div>
 
 <p>One of the stories was voted democratically by the class to be made into a movie, and subsequently we started working on their roles. The class was divided in four groups: Directors / Cameraman, Actors, Set designers and Fashion designers. The groups worked collaboratively together and at the end of the three days workshop, we managed to record a seven minutes short film. The challenges we faced were mostly about communication, but the students’ imagination and brilliant problem solving allowed them to progress through the movie independently and without too much effort.</p>
@@ -104,6 +115,7 @@ title: January - February 2019
 <div class="pure-u-1">
   <img
   alt="TODO"
+  class="pure-u-1"
   src="{{ 'assets/img/2019-7.jpg' | relative_url }}"
   >
 </div>
@@ -113,6 +125,7 @@ title: January - February 2019
 <div class="pure-u-1">
   <img
   alt="TODO"
+  class="pure-u-1"
   src="{{ 'assets/img/2019-8.jpg' | relative_url }}"
   >
 </div>
@@ -122,40 +135,53 @@ title: January - February 2019
 <div class="pure-u-1">
   <img
   alt="TODO"
+  class="pure-u-1"
   src="{{ 'assets/img/2019-9.jpg' | relative_url }}"
   >
 </div>
 
 <p>In the final project students were asked to divide in groups and create four different settings throughout which they would be animating a kite flying around. They showed outstanding skills in drawing and composition, as well as concept development and teamwork. These are the results and their work.</p>
 
-<div class="pure-u-1 pure-u-md-11-24 light-margin">
-  <img
-  alt="TODO"
-  class="pure-u-1"
-  src="{{ 'assets/img/2019-10.jpg' | relative_url }}"
-  >
-</div>
-<div class="pure-u-1 pure-u-md-11-24 light-margin">
-  <img
-  alt="TODO"
-  class="pure-u-1"
-  src="{{ 'assets/img/2019-11.jpg' | relative_url }}"
-  >
-</div>
+<div class="pure-g">
+  <div class="pure-u-md-1-2 light-vertical-margin">
+    <div class="pure-u-md-23-24 float-left-md">
+      <img
+      alt="TODO"
+      class="pure-u-1"
+      src="{{ 'assets/img/2019-10.jpg' | relative_url }}"
+      >
+    </div>
+  </div>
 
-<div class="pure-u-1 pure-u-md-11-24 light-margin">
-  <img
-  alt="TODO"
-  class="pure-u-1"
-  src="{{ 'assets/img/2019-12.jpg' | relative_url }}"
-  >
-</div>
-<div class="pure-u-1 pure-u-md-11-24 light-margin">
-  <img
-  alt="TODO"
-  class="pure-u-1"
-  src="{{ 'assets/img/2019-13.jpg' | relative_url }}"
-  >
+  <div class="pure-u-md-1-2 light-vertical-margin">
+    <div class="pure-u-md-23-24 float-right-md">
+      <img
+      alt="TODO"
+      class="pure-u-1"
+      src="{{ 'assets/img/2019-11.jpg' | relative_url }}"
+      >
+    </div>
+  </div>
+
+  <div class="pure-u-md-1-2 light-vertical-margin">
+    <div class="pure-u-md-23-24 float-left-md">
+      <img
+      alt="TODO"
+      class="pure-u-1"
+      src="{{ 'assets/img/2019-12.jpg' | relative_url }}"
+      >
+    </div>
+  </div>
+
+  <div class="pure-u-md-1-2 light-vertical-margin">
+    <div class="pure-u-md-23-24 float-right-md">
+      <img
+      alt="TODO"
+      class="pure-u-1"
+      src="{{ 'assets/img/2019-13.jpg' | relative_url }}"
+      >
+    </div>
+  </div>
 </div>
 
 <p>Unfortunately the last days we had to rush through, as we didn’t have much time left. However the outcome was successful and the kids were very pleased and excited about their work. During our goodbye ceremony they expressed all their gratitude to the teachers through a presentation and an announcement in front of the school staff, students and the school principal.</p>
@@ -164,19 +190,25 @@ title: January - February 2019
 
 <p>Our second workshop took place in Evelyn nurseries, to a class of eight girls from 15 to 18 years old. Being the first time in the children home, we had to adjust to the schedule, habits and expectation of the students who were curious about the course but less interested in the development of the subject for their future career. Nevertheless, going forward with the classes the students demonstrated intuition and skills, and their communication and participation helped us shape our workshop on their need and interest. We began with the photography workshop which lasted about three hours. The following pictures show their progress during the classes</p>
 
-<div class="pure-u-1 pure-u-md-11-24 light-margin">
-  <img
-  alt="TODO"
-  class="pure-u-1"
-  src="{{ 'assets/img/2019-14.jpg' | relative_url }}"
-  >
-</div>
-<div class="pure-u-1 pure-u-md-11-24 light-margin">
-  <img
-  alt="TODO"
-  class="pure-u-1"
-  src="{{ 'assets/img/2019-15.jpg' | relative_url }}"
-  >
+<div class="pure-g">
+  <div class="pure-u-md-1-2">
+    <div class="pure-u-md-23-24 float-left-md">
+      <img
+      alt="TODO"
+      class="pure-u-1"
+      src="{{ 'assets/img/2019-14.jpg' | relative_url }}"
+      >
+    </div>
+  </div>
+  <div class="pure-u-md-1-2 float-right-md">
+    <div class="pure-u-md-23-24 float-right-md">
+      <img
+      alt="TODO"
+      class="pure-u-1"
+      src="{{ 'assets/img/2019-15.jpg' | relative_url }}"
+      >
+    </div>
+  </div>
 </div>
 
 <p>Having more time to develop the movie, as the animation course was only planned with Niroshan in Senkadagala, we could invest more time and energies in the making of the movie. Firstly, based on the same presentation we gave to Senkadagala students, we asked the girls to write their own short stories. This time they didn’t divide in groups and each of them wrote and produces their plot. At the end of the two hours the story that had the most votes was choose to be made into our project. The class was again split in different groups but this time all of them ad an opportunity to show their acting skills.</p>
@@ -184,6 +216,7 @@ title: January - February 2019
 <div class="pure-u-1">
   <img
   alt="TODO"
+  class="pure-u-1"
   src="{{ 'assets/img/2019-16.jpg' | relative_url }}"
   >
 </div>
@@ -193,6 +226,7 @@ title: January - February 2019
 <div class="pure-u-1">
   <img
   alt="TODO"
+  class="pure-u-1"
   src="{{ 'assets/img/2019-17.jpg' | relative_url }}"
   >
 </div>
