fix: error in text

--- a/_pages/projects/2019.html
+++ b/_pages/projects/2019.html
@@ -11,7 +11,7 @@ title: January - February 2019
 <p>In particular the course covers the following subjects:</p>
 <ul>
   <li><em>Photography</em>: digital camera and basic techniques such as composition and lighting; Rule of thirds, perspective and colouring. Practical exercises on portrait, people, landscapes and still life.</li>
-  <li><em>Photography</em>: digital camera and basic techniques such as composition and lighting; Rule of thirds, perspective and colouring. Practical exercises on portrait, people, landscapes and still life.</li>
+  <li><em>Movie making</em>: creative writing and concept for a short movie, making the storyboard. Roles in the industry: movie director, cameraman, set designer, light technician, fashion and make up artist. Practical exercises: making and editing a 5 minutes short movie.</li>
   <li><em>Stop motion animation</em>: using photography, plasticine and 3D cut out paper.</li>
   <li><em>Video editing</em>: colour composition, editing, green screen, <a href="https://www.openshot.org">OpenShot</a> software.</li>
   <li><em>Working in the industry</em>: how to approach creative market; a 10-hour master class led by Sri Lankan professional animator and designer Niroshan Bandara.</li>
